[project]
name = "metaboatrace.models"
version = "2.2.7"
description = "Models of Japanese boatrace"
authors = [
    { name = "k0kishima", email = "okishimaxyz@gmail.com" }
]
dependencies = [
    "pydantic>=2.0.3",
]
readme = "README.md"
requires-python = ">= 3.11"
license = "MIT"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = true
disallow_any_generics = true
disallow_untyped_defs = true
no_implicit_optional = true

[tool.black]
line-length = 100
target-version = ['py311']

[tool.pytest.ini_options]
testpaths = ["tests",]
